student-content/templates/docling-serve/route.yaml
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: docling-v0-7-0-predictor
  namespace: ai501
spec:
  path: /
  to:
    kind: Service
    name: docling-v0-7-0-predictor
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
